profile picture in collection-picture still have bug. the posts will be cropped now. privacy is cool now.

--- a/static/styles/responsive.css
+++ b/static/styles/responsive.css
@@ -4046,3 +4046,79 @@
 
 
 /* End Reset1 & Reset2 */
+
+
+footer {
+    background-color: #1b1c1e;
+}
+
+footer .menu {
+    width: 100%;
+    height: 250px;
+}
+
+footer .menu ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    list-style-type: none;
+    margin-top: 35px;
+    padding-left: 0px !important;
+}
+
+footer .menu ul li h1 {
+    color: #ececeb;
+    font-size: 17px;
+    font-weight: bold;
+}
+
+footer .menu ul li a {
+    color: #ececeb;
+    text-decoration: none;
+    font-size: 15px;
+    transition: 0.3s;
+}
+
+footer .menu ul li a:hover {
+    color: #bfbfbf;
+    transition: 0.3s;
+}
+
+footer p {
+    text-align: center;
+}
+
+footer p>a {
+    color: #ececeb;
+    text-decoration: none;
+    font-size: 18px;
+    transition: 0.3s;
+}
+
+footer p>a:hover {
+    color: #bfbfbf;
+    transition: 0.3s;
+}
+
+footer .icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 50px;
+    background-color: #bfbfbf !important;
+    text-align: center;
+}
+
+footer .icon svg {
+    color: #1b1c1e;
+    padding: 0 8px;
+    font-size: 25px;
+    transition: 0.3s;
+}
+
+footer .icon svg:hover {
+    color: #ececeb;
+    transition: 0.3s;
+}
